[package]
edition.workspace = true
name = "rtc-node-ffi-bindings"
version = "0.0.1"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = [
    "async",
    "napi6",
] }
napi-derive = "2.12.2"
livekit-ffi = { path = "../livekit-ffi" }
prost = "0.14"
prost-types = "0.14"
log = { workspace = true }
tokio = { version = "1.37.0", features = ["full"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
