[package]
edition.workspace = true
name = "rtc-node-ffi-bindings"
version = "0.12.48"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8.2", default-features = false, features = [
    "compat-mode",
    "async",
    "napi6",
] }
napi-derive = "3.5.1"
livekit-ffi = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
