[package]
name = "livekit-ffi"
version = "0.12.44"
edition.workspace = true
license.workspace = true
description = "FFI interface for bindings in other languages"
repository.workspace = true
readme = "README.md"

[features]
default = ["rustls-tls-native-roots"]
native-tls = ["livekit/native-tls"]
native-tls-vendored = ["livekit/native-tls-vendored"]
rustls-tls-native-roots = ["livekit/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["livekit/rustls-tls-webpki-roots"]
__rustls-tls = ["livekit/__rustls-tls"]

# Enable tokio-console to debug tasks
tracing = ["tokio/tracing", "console-subscriber"]

[dependencies]
livekit = { workspace = true }
webrtc-sys = { workspace = true }
soxr-sys = { workspace = true }
imgproc = { workspace = true }
livekit-protocol = { workspace = true }
tokio = { workspace = true, features = ["full", "parking_lot"] }
futures-util = { workspace = true, default-features = false, features = ["sink"] }
parking_lot = { workspace = true, features = ["deadlock_detection"] }
prost = "0.14.1"
lazy_static = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
dashmap = "5.4"
env_logger = { workspace = true }
downcast-rs = "1.2"
console-subscriber = { version = "0.1", features = ["parking_lot"], optional = true }
bytes = { workspace = true }
from_variants = "1.0.2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
link-cplusplus = { version = "1", features = ["nothing"] }

[build-dependencies]
prost-build = "0.14.1"
webrtc-sys-build = { workspace = true }

[dev-dependencies]
livekit-api = { workspace = true }

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
