[package]
name = "livekit-protocol"
version = "0.6.0"
edition.workspace = true
license.workspace = true
description = "Livekit protocol and utilities for the Rust SDK"
repository.workspace = true

[dependencies]
livekit-runtime = { workspace = true }
tokio = { version = "1", default-features = false, features = [
    "sync",
    "macros",
    "rt",
] }
futures-util = { version = "0.3", features = ["sink"] }
parking_lot = { workspace = true }
prost = "0.12"

serde = "1.0"
pbjson = "0.6"
pbjson-types = "0.6"
thiserror = { workspace = true }
