[package]
name = "livekit-protocol"
version = "0.7.2"
edition.workspace = true
license.workspace = true
description = "Livekit protocol and utilities for the Rust SDK"
repository.workspace = true

[dependencies]
livekit-runtime = { workspace = true }
tokio = { workspace = true, default-features = false, features = [
    "sync",
    "macros",
    "rt",
] }
futures-util = { workspace = true, features = ["sink"] }
parking_lot = { workspace = true }
prost = { workspace = true }

serde = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
thiserror = { workspace = true }
