[package]
name = "livekit-runtime"
version = "0.3.0"
license = "Apache-2.0"
description = "Async runtime compatibility layer for LiveKit"
edition = "2021"
repository = "https://github.com/livekit/rust-sdks"

[features]
default = ["async"]
tokio = ["dep:tokio"]
async = ["dep:async-std", "dep:futures", "dep:async-io"]

[dependencies]
tokio = { version = "1", default-features = false, optional = true, features = [
    "rt",
    "rt-multi-thread",
] }

# async std dependencies
async-std = { version = "1", optional = true }
futures = { version = "0.3.30", optional = true }
async-io = { version = "2.3.1", optional = true }