[package]
name = "livekit-token-source"
description = "Token sources for the LiveKit Rust SDK"
version = "0.1.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
# name = "_livekit_token_source"

[dependencies]
reqwest = { workspace = true, features = ["rustls-tls-native-roots"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uniffi = { workspace = true, features = ["tokio", "scaffolding-ffi-buffer-fns"] }
