[package]
name = "livekit-token"
version = "0.1.0"
license = "Apache-2.0"
description = "Access token generation/verification for LiveKit"
edition = "2021"
repository = "https://github.com/livekit/rust-sdks"

[dependencies]
livekit-protocol = { workspace = true }
jsonwebtoken = { version = "10.1.0", features = ["aws_lc_rs"] }
serde = "1.0.228"
thiserror = "2.0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }