[package]
name = "livekit-token"
version = "0.1.0"
license = "Apache-2.0"
description = "Access token generation/verification for LiveKit"
edition = "2021"
repository = "https://github.com/livekit/rust-sdks"

[dependencies]
livekit-protocol = { workspace = true }
serde = "1.0.228"
thiserror = "2.0.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonwebtoken = { version = "10.1.0", features = ["aws_lc_rs"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# FIXME: getrandom must have the `js` feature set to compile in wasm32. The version here matches
# with the version of a downstream dependency of jsonwebtoken and must be kept up to date if
# jsonwebtoken is upgraded!
# (run cargo tree -e features --target wasm32-unknown-unknown to figure out the new version!)
getrandom = { version = "0.2.16", features = ["js"] }
jsonwebtoken = { version = "10.1.0", default-features = false, features = ["rust_crypto"] }
