[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[package]
name = "livekit-uniffi"
version = "0.1.3"
edition.workspace = true
license.workspace = true
description = "Experimental FFI interface using UniFFI"
repository.workspace = true
readme = "README.md"
publish = false

[dependencies]
livekit-protocol = { workspace = true }
livekit-api = { workspace = true }
uniffi = { version = "0.31", features = ["cli", "scaffolding-ffi-buffer-fns"] }
log = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
once_cell = "1.21.3"
# Dart binding generator. Not published to crates.io, so pinned by git rev. The
# rev must target the same uniffi-rs release (0.31) as the `uniffi` dependency
# above, or it cannot read this crate's compiled metadata.
uniffi-dart = { git = "https://github.com/Uniffi-Dart/uniffi-dart", rev = "90f2c6f29cbf88c8bc2cf515e6a0c2314a48844c", optional = true }
camino = { version = "1", optional = true }

[features]
# Enables the `uniffi-bindgen-dart` bin. Not enabled for library builds.
dart-bindgen = ["dep:uniffi-dart", "dep:camino"]

[build-dependencies]
uniffi = { version = "0.31", features = ["build", "scaffolding-ffi-buffer-fns"] }

[[bin]]
name = "uniffi-bindgen"
path = "bindgen.rs"

[[bin]]
name = "uniffi-bindgen-dart"
path = "bindgen-dart.rs"
required-features = ["dart-bindgen"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
