[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[package]
name = "livekit-uniffi"
version = "0.1.1"
edition.workspace = true
license.workspace = true
description = "Experimental FFI interface using UniFFI"
repository.workspace = true
readme = "README.md"
publish = false

[dependencies]
livekit-protocol = { workspace = true }
livekit-api = { workspace = true }
livekit-datatrack = { workspace = true, features = ["uniffi"] }
uniffi = { workspace = true, features = ["cli", "scaffolding-ffi-buffer-fns", "tokio"] }
log = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt-multi-thread"] }
tokio-util =  "0.7.18"
prost = "0.12"
futures-util = { workspace = true, default-features = false, features = ["sink"] }
bytes = { workspace = true }
once_cell = "1.21.3"
thiserror = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build", "scaffolding-ffi-buffer-fns"] }

[[bin]]
name = "uniffi-bindgen"
path = "bindgen.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
