[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[package]
name = "livekit-uniffi"
version = "0.1.5"
edition.workspace = true
license.workspace = true
description = "Experimental FFI interface using UniFFI"
repository.workspace = true
readme = "README.md"
publish = false

[dependencies]
livekit-protocol = { workspace = true }
livekit-api = { workspace = true }
livekit-datatrack = { workspace = true, features = ["uniffi"] }
uniffi = { workspace = true, features = ["scaffolding-ffi-buffer-fns", "tokio"] }
log = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt-multi-thread"] }
tokio-util =  "0.7.18"
prost = "0.12"
futures-util = { workspace = true, default-features = false, features = ["sink"] }
bytes = { workspace = true }
once_cell = "1.21.3"
thiserror = { workspace = true }
# Dart binding generator. Not published to crates.io, so pinned by git rev. The
# rev must target the same uniffi-rs release (0.31) as the `uniffi` dependency
# above, or it cannot read this crate's compiled metadata.
uniffi-dart = { git = "https://github.com/Uniffi-Dart/uniffi-dart", rev = "90f2c6f29cbf88c8bc2cf515e6a0c2314a48844c", optional = true }
camino = { version = "1", optional = true }

[features]
# Enables the `uniffi-bindgen` bin (uniffi's CLI: clap + the bindings backends).
# Tooling-only — kept off library builds so the shipped cdylib/staticlib don't
# carry the bindgen machinery. Enable it when running the bin:
# `cargo run --features cli --bin uniffi-bindgen generate ...`.
cli = ["uniffi/cli"]
# Enables the `uniffi-bindgen-dart` bin. Not enabled for library builds.
dart-bindgen = ["dep:uniffi-dart", "dep:camino"]

[build-dependencies]
uniffi = { workspace = true, features = ["build", "scaffolding-ffi-buffer-fns"] }

[[bin]]
name = "uniffi-bindgen"
path = "bindgen.rs"
required-features = ["cli"]

[[bin]]
name = "uniffi-bindgen-dart"
path = "bindgen-dart.rs"
required-features = ["dart-bindgen"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
