[package]
name = "livekit-utils"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Shared utilities for livekit"
repository = "https://github.com/livekit/client-sdk-rust" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
tokio = { version = "1", features = ["full"] }
