[package]
name = "livekit-utils"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Shared utilities for livekit"
repository = "https://github.com/livekit/client-sdk-rust" 

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
futures-util = "0.3"
parking_lot = "0.12"
