[package]
name = "livekit-wakeword"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["alternative-backend", "ndarray", "std"] }
ort-tract = "0.2.0+0.22"
thiserror = "2"
