[package]
name = "livekit-webrtc"
version = "0.1.1"
edition = "2021"
homepage = "https://livekit.io"
license = "Apache-2.0"
description = "Livekit safe bindings to libwebrtc"
repository = "https://github.com/livekit/client-sdk-rust" 

[dependencies]
livekit-utils = { path = "../livekit-utils", version = "0.1.1" }
log = "0.4"
thiserror = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
webrtc-sys = { path = "../webrtc-sys", version = "0.1.1" }
futures = { version = "0.3", default-features = false }
cxx = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.22", features=[
  "MessageEvent",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelState",
  "EventTarget",
  "WebGlRenderingContext",
  "WebGlTexture",
] }

[dev-dependencies]
env_logger = "0.9"
