[package]
name = "livekit"
version = "0.7.32"
edition.workspace = true
license.workspace = true
description = "Rust Client SDK for LiveKit"
repository.workspace = true

[features]
# By default ws TLS is not enabled
default = ["tokio"]

async = ["livekit-api/signal-client-async"]
tokio = ["livekit-api/signal-client-tokio"]
dispatcher = ["livekit-api/signal-client-dispatcher"]


# Note that the following features only change the behavior of tokio-tungstenite.
# It doesn't change the behavior of libwebrtc/webrtc-sys
native-tls = ["livekit-api/native-tls"]
native-tls-vendored = ["livekit-api/native-tls-vendored"]
rustls-tls-native-roots = ["livekit-api/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["livekit-api/rustls-tls-webpki-roots"]
__rustls-tls = ["livekit-api/__rustls-tls"]
__lk-internal = [] # internal features (used by livekit-ffi)
__lk-e2e-test = [] # end-to-end testing with a LiveKit server

[dependencies]
livekit-runtime = { workspace = true }
livekit-api = { workspace = true }
libwebrtc = { workspace = true }
livekit-protocol = { workspace = true }
prost = "0.12"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["sync", "macros", "fs"] }
parking_lot = { workspace = true }
futures-util = { workspace = true, default-features = false, features = ["sink"] }
thiserror = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
chrono = "0.4.38"
semver = "1.0"
libloading = { version = "0.8.6" }
bytes = { workspace = true }
bmrng = "0.5.2"

[dev-dependencies]
anyhow = { workspace = true }
test-log = "0.2.18"
