[package]
name = "livekit"
version = "0.7.50"
edition.workspace = true
license.workspace = true
description = "Rust Client SDK for LiveKit"
repository.workspace = true
readme = "README.md"

[features]
# By default ws TLS is not enabled
default = ["tokio"]

async = ["livekit-api/signal-client-async"]
tokio = ["livekit-api/signal-client-tokio"]
dispatcher = ["livekit-api/signal-client-dispatcher"]

# On Wayland, libwebrtc uses GDBus to communicate with the XDG Desktop Portal.
# GDBus requires a GLib event loop to be running. Enable this feature if you
# wish to use screensharing, and you do not already have a GLib event loop
# running in your application.
glib-main-loop = [ "libwebrtc/glib-main-loop" ]

# Note that the following features only change the behavior of tokio-tungstenite.
# It doesn't change the behavior of libwebrtc/webrtc-sys
native-tls = ["livekit-api/native-tls"]
native-tls-vendored = ["livekit-api/native-tls-vendored"]
rustls-tls-native-roots = ["livekit-api/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["livekit-api/rustls-tls-webpki-roots"]
__rustls-tls = ["livekit-api/__rustls-tls"]
__lk-internal = [] # internal features (used by livekit-ffi)
__lk-e2e-test = ["livekit-data-stream/test-utils"] # end-to-end testing with a LiveKit server

[dependencies]
livekit-runtime = { workspace = true }
livekit-api = { workspace = true }
libwebrtc = { workspace = true }
livekit-protocol = { workspace = true }
livekit-common = { workspace = true }
livekit-data-stream = { workspace = true }
livekit-datatrack = { workspace = true }
prost = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = ["sync", "macros", "fs"] }
tokio-stream = { workspace = true, features = ["sync"] }
parking_lot = { version = "0.12" }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
thiserror = "1.0"
lazy_static = "1.4"
log = "0.4"
chrono = "0.4.38"
semver = "1.0"
libloading = { version = "0.8.6" }
bytes = "1.10.1"
bmrng = "0.5.2"
base64 = "0.22"

[dev-dependencies]
# Enable data-stream test constructors (e.g. TextStreamReader::new_for_test) for our test suites.
livekit-data-stream = { workspace = true, features = ["test-utils"] }
anyhow = "1.0.99"
test-log = "0.2.18"
test-case = "3.3"
serial_test = "3.0"
http = "1.1"
