[package]
name = "webrtc-sys"
version = "0.3.14"
edition = "2021"
homepage = "https://livekit.io"
license = "Apache-2.0"
description = "Unsafe bindings to libwebrtc"
repository = "https://github.com/livekit/client-sdk-rust"

[features]
default = []
use_vaapi = []
use_nvidia = []

[dependencies]
# Copy an updated version of the cxx.cc file from cxx's repository
# into the src directory when updating to a new version of cxx
# and change the include path for cxx.h to "rust/cxx.h"
cxx = "=1.0.186"
log = "0.4"

[build-dependencies]
webrtc-sys-build = { workspace = true }
cxx-build = "=1.0.186"
glob = "0.3"
cc = "1.0"

[dev-dependencies]
env_logger = "0.10"
