[package]
name = "webrtc-sys"
version = "0.3.18"
edition = "2021"
homepage = "https://livekit.io"
license = "Apache-2.0"
description = "Unsafe bindings to libwebrtc"
repository = "https://github.com/livekit/client-sdk-rust"

[features]
default = []

[dependencies]
cxx = "1.0"
log = "0.4"

[build-dependencies]
webrtc-sys-build = { workspace = true }
cxx-build = "1.0"
glob = "0.3"
cc = "1.0"
pkg-config = "0.3.22"

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3.22"

[dev-dependencies]
env_logger = "0.10"
