[package]
name = "webrtc-sys"
version = "0.3.23"
edition.workspace = true
homepage = "https://livekit.io"
license.workspace = true
description = "Unsafe bindings to libwebrtc"
repository.workspace = true

[features]
default = []

[dependencies]
cxx = "1.0"
log = { workspace = true }

[build-dependencies]
webrtc-sys-build = { workspace = true }
cxx-build = "1.0"
glob = "0.3"
cc = "1.0"
pkg-config = "0.3.22"

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3.22"

[dev-dependencies]
env_logger = { workspace = true }
