[package]
name = "a2a_mock_agent"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Minimal A2A-compliant HTTP agent for local E2E testing of livekit-a2a-relay"

[dependencies]
tokio = { workspace = true, features = ["full"] }
axum = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-stream = { workspace = true }
openssl = { version = "0.10", features = ["vendored"] }
