[package]
name = "agent_dispatch"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
tokio = { workspace = true, features = ["full", "parking_lot"] }
livekit-api = { workspace = true, features = ["rustls-tls-native-roots"] }
env_logger = { workspace = true }
log = { workspace = true }
livekit-protocol = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
